<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDetailPenyewa"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/bacground_brown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbDetailPenyewa"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:paddingBottom="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idPenyewa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/identitas_penyewa"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/idPenyewa"
                        android:layout_marginTop="20dp"
                        android:text="@string/nama_penyewa"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HNama"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtName"
                        android:text="@string/penyewa"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HNama"
                        android:layout_marginTop="10dp"
                        android:text="@string/alamat"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtAlamat"
                        android:text="@string/penyewa"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtTlp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HAlamat"
                        android:layout_marginTop="10dp"
                        android:text="@string/no_telp_hp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HTelp"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtTlp"
                        android:text="@string/_021"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/dtMobil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/data_kendaraan"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMerk"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/dtMobil"
                        android:layout_marginTop="20dp"
                        android:text="@string/merk_kendaraan"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HMerk"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtMerk"
                        android:text="@string/pajero"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtHarga"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HMerk"
                        android:layout_marginTop="10dp"
                        android:text="@string/harga"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HHarga"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtHarga"
                        android:text="@string/rp_500000"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtPromo"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HHarga"
                        android:layout_marginTop="10dp"
                        android:text="@string/promo"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HPromo"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtPromo"
                        android:text="@string/rp_500000"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtLamaSewa"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HPromo"
                        android:layout_marginTop="10dp"
                        android:text="@string/lama_sewa"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/HLamaSewa"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/txtLamaSewa"
                        android:text="@string/_2_hari"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/txtTotal"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_below="@+id/HLamaSewa"
                        android:layout_marginTop="10dp"
                        android:text="Screenshot Sebagai Bukti Untuk Pembayaran"
                        android:textColor="@color/black"
                        android:textSize="17sp" />



                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>