<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/beranda"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:src="@drawable/rent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/this_rental"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_info_mobil"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bacground_brown"
            android:text="@string/informasi_kendaraan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_sewa"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/bacground_brown"
            android:text="@string/sewa_kendaraan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>